docs/static/g5.css
/******************************************************************************
    Style for Gauquelin5 documentation.
    
    @license    GPL
    @history    2017, Thierry Graff, Creation
********************************************************************************/

@import "normalize.css";
@import "style.css";

@media print{
    .left,
    .right,
    .prevnext,
    aside.right-block{
        display:none;
    }
}

:root {
    --left-bg-color:#edebc2;
    --left-shadow:0 1px 3px grey;
    --left-border:1px solid grey;
    --left-width:15%;
    --prevnext-height:4rem;
}

/* ================ Semantic ================ */
.formula{
    padding:0.5em;
    font-family:"Courier New",Courier,monospace;
    border:1px solid grey;
    display:inline-block;
}
.warning{
    width:50%;
    padding:.5rem;
    margin:.5rem;
    background:gold;
    border:1px solid grey;
}
.tip{
    margin:1rem;
    padding:1rem;
    background:lightblue;
    border:2px solid yellow;
}

.todo{
    display:inline-block;
    margin:.5em;
    padding:.5em;
    border:1px solid grey;
    background:gold;
}

.yes{
background: rgb(146,207,22);
background: radial-gradient(circle, rgba(146,207,22,0.9) 0%, rgba(121,171,20,0.9) 100%);
}
.no{
background: rgb(231,61,10);
background: radial-gradient(circle, rgba(231,61,10,0.9) 0%, rgba(156,49,18,0.9) 100%);
}


/* ================ Site layout ================ */
html{height:100%;}

body{
    display:flex;
    flex-direction:column;
    font-family:"roboto flex",sans-serif;
    height:100%;
    line-height:1.4;
    padding-top:0;
    padding-left:0;
    padding-bottom:1rem;
    margin:0;
}

/* .container = direct children of body */
.container{ 
   flex:1 0 auto;
   display:flex;
   flex-flow:row wrap;
}

/* .right, .left and .content = direct children of .container */
.content{
    flex:1 1 85%;
    order:2; /* In the html code, write .left sidebar after .content area */
    padding:1rem .5rem 2rem 1rem;
    overflow-y: auto;            /* independent vertical scroll */
}
.left{
    flex:1 1 var(--left-width);
    order:1; /* In the html code, write .left sidebar after .content area */
    font-family:Arial,Helvetica,sans-serif;
    margin-top:var(--prevnext-height);
    padding-top:.5rem;
    font-size:.9rem;
    background:var(--left-bg-color);
    border-right:var(--left-border);
    box-shadow:var(--left-shadow);
    overflow-y: auto;            /* independent vertical scroll */
}
.left li{
    list-style:none;
}
.left ul{
    padding-left:1rem;
}
.left>nav>ul{
    padding-left:0.5rem;
    position:relative;
    top:.5rem;
}
.left>nav>ul>li{
    padding-bottom:0.3rem;
}

.right-block{
    z-index:100; /*  */
    position:fixed;
    top:4rem;
    right:2rem;
    display:table; /*  */
    padding:1rem;
    border-left:1px solid grey;
    border-bottom:1px solid grey;
    border-radius:5px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    opacity:1;
    background:radial-gradient(gold, gold, lightgreen);;
}
.right-block>div{
    font-weight:bold;
}
.right-block a{
    text-decoration:none;
}
.right-block li{
    list-style:none;
}
.right-block ul{
    padding-left:0.2rem;
}

/* ================ Navigation ================ */
.zzzzzzzzzzzz-nav-right{
    position:fixed;
    top:2rem;
    right:1rem;
    background:#eee;
    opacity:1;
}

.prevnext{
    font-family:DejaVu,serif;
    position:fixed; top:0; left:0;
    margin:0;
    width:var(--left-width);
    height:var(--prevnext-height);
    background:var(--left-bg-color);
    border-bottom:var(--left-border);
    border-right:var(--left-border);
    box-shadow:var(--left-shadow);
}
.prevnext a{
    display:inline-block;
    position:fixed;
    width:40px; height:40px;
    text-decoration:none;
    font-weight:bolder;
    font-size:2rem;
}
.prevnext a:hover{
    text-decoration:none;
}
.prevnext a.index{top:0; left:50px; font-size:0.5rem;}
.prevnext a.top{top:0; left:80px;}
.prevnext a.prev{top:25px; left:45px;}
.prevnext a.next{top:25px; left:110px;}
.prevnext a.topage{
    top:15px; left:82px; color:#black; font-size:1.1rem;
    transform:rotate(-90deg);
}

/* ================ Main elements ================ */
article{
    line-height:2;
}

.pagetoc{
    display:inline-block;
    background: rgb(207,236,23);
    background: radial-gradient(circle, rgba(207,236,23,0.0578) 17%, rgba(193,236,245,0.3827) 40%, rgba(213,235,204,0.4415) 47%); 
    margin:1rem 2rem;
    padding:1rem 1rem 1rem 0;
    border:1px dotted black;
    border-radius:5px;
    font-family:Arial,Helvetica,sans-serif;
    line-height:1.6;
}
.pagetoc ul{
    list-style-type:none;
    padding-left:1rem;
    margin:0;
}
.pagetoc ul>li{}
.pagetoc>ul>li>a{
    font-weight:bold;
}


.intro{
    font-size:1.2rem;
    margin:1rem 15rem 3rem 2rem;
}

/* ================ Particular elements ================ */
h1{
    width:100%;
    margin:auto;
    text-align:center;
    font-size:2.5rem;
    font-weight:bold;
    padding:0.3rem;
    margin-bottom:4rem;
}
h1 .subtitle{
    font-size:0.8em;
}
h2{
    font-size:2rem;
    margin:1rem 0;
}
h3{
    font-size:1.5rem;
    margin:1rem 0;
}
h4{
    margin:.7rem 0;
}

a{
    text-decoration:none;
}
a:hover{
    text-decoration:underline;
}

img{
    display: block;
    background:white;
}

.pre{
    white-space:pre-wrap;
}
pre{
    display:table;
    white-space:pre-wrap;
    margin:1rem;
    background:#c9d3e0;
    padding:.5rem;
    border-radius:2px;
    border:1px solid #717a9f;
    line-height:1.15;
}
pre.normal{
    background:none;
    border:none;
    margin:0;
    margin-left:1em;
    padding:0;
}
code{
    background:lightgrey;
    padding:0 2px;
}
code.color{
    background:lightgrey;
}

cite{
    font-family:DejaVu,serif;
    display:block;
    margin:1rem;
}
blockquote{
    display:block;
    border:1px solid grey;
    padding:5px;
    margin:1rem;
    font-family:DejaVu,serif;
    background:#fee;
}

table.border{
    border-collapse:collapse;
}
table.border td{
    border: 1px solid #a2a9b1;
}

table.alternate tr:nth-child(even){
    background: #eee
}
table.alternate tr:nth-child(odd){
    background: #ddd
}
table.padded2 td{
    padding:2px;
}

table.wikitable{
    border-collapse:collapse;
}
table.wikitable > tr > th,
table.wikitable > * > tr > th {
    background-color:lightblue;
    text-align:center;
    vertical-align:top;
}
table.wikitable > tr > th,
table.wikitable > tr > td,
table.wikitable > * > tr > th,
table.wikitable > * > tr > td {
    border:1px solid #a2a9b1;
    padding:0.2rem 0.4rem;
    vertical-align:top;
}
table.wikitable tr td code{
    background:none;
}

